<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal" 
    android:background="@drawable/spacebackground" >

    <TextView
        android:id="@+id/tvWelcome"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="40sp"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/SpaceStyle"
        android:id="@+id/begTut"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/begin_tutorial"
        android:textSize="20sp" />
    <Button
        style="@style/SpaceStyle"
        android:id="@+id/rew1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/reward1"
        android:textSize="20sp" />
    <Button
        style="@style/SpaceStyle"
        android:id="@+id/rew2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/reward2"
        android:textSize="20sp" />
    
</RelativeLayout>